# remote-opencode-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example.env  pyproject.toml
src/: server.py
